# aeo-scanner-mcp

./: .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml  scoring-methodology.md  server.json
.github/workflows/: publish.yml
src/: server.py
workers/: package-lock.json  package.json  worker-configuration.d.ts  wrangler.jsonc
workers/src/: api-client.ts  index.ts  prompts.ts  resources.ts  scoring-methodology.ts  tools.ts
