[project]
name = "aeo-scanner"
version = "1.0.0"
description = "MCP server for AI search visibility auditing. Checks AEO score and Agent Readiness score for any website."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Convrgent", email = "hello@convrgent.ai"}]
keywords = ["mcp", "aeo", "seo", "ai-search", "agent-readiness", "ai-visibility"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
aeo-scanner = "src.server:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
